--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@types/fs-extra": "^9.0.11",
+    "fs-extra": "^10.0.0",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^6.0.2"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
+    "@types/node": "^12.20.13",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "typescript": "4.0"
