--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@types/fs-extra": "^9.0.11",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-markdown": "^6.0.2"
+    "react-markdown": "^6.0.2",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "@types/node": "^12.20.13",
