--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "@types/fs-extra": "^9.0.11",
     "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/yup": "^0.29.11",
+    "axios": "^0.21.1",
+    "formik": "^2.2.6",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^6.0.2",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^12.20.13",
