--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@types/fs-extra": "^9.0.11",
+    "@types/mongodb": "^3.6.14",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "fs-extra": "^10.0.0",
     "gray-matter": "^4.0.3",
+    "mongodb": "^3.6.7",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
